@@ -39,15 +39,15 @@ DIST chromium-36.0.1941.0-testdata.tar.xz 109180096 SHA256 4007f36ee0442cee4757e
 DIST chromium-36.0.1941.0.tar.xz 204959420 SHA256 fa3a7d5d9fe2a946139d023403584a6fa94f7f57028633c6428c470a11f6308b SHA512 15e5f8866be2963bf647f75fd25222d0e1bcb0980ad997210990cf5b02beaffc8b471994d2bb6a38f983e788e16ab60582522c55dd813ceccaae62981da754d6 WHIRLPOOL 0fd4f12956911239f87f4b3ca924987b36b018d45d5c8e3405a2738ea078243a352108e62b9364e7dc236621a1969ea6a0678d3535038f2a41d172e3b397aefa
 EBUILD chromium-34.0.1847.116.ebuild 19628 SHA256 b75129f9047c79d86488703116dd05c782e9bd9157ab4b2e2fa214829d3b2a29 SHA512 3b1f2a857f433d2db5df52640b8137ef13fd362dcfc5a0bf005de0fee3924f2c10566f30479e5985d9bf85448a991323e865d8f8bb55228147c01a80da36be39 WHIRLPOOL d1fe1af969ff4292875a331f8d0abd4a2645bf1fa11ff9863c18c2f9968a8c8481667ab295a731dc1162cc738fecea3a1fed6f214f23e4298915fa666f7a0544
 EBUILD chromium-35.0.1916.27.ebuild 19800 SHA256 c763140ed722743f7b70c491c902bd725f0a79220e4e757a368f0d466f2d8927 SHA512 3d93201b98850e2243adfd4960ea5a59ef110a6322c9a5686dc5c6fc209f9164db3ad6407077784c7355d4e4642ae8c9d4e549f4b009e4267b7ecf2a4fa1a398 WHIRLPOOL bd8ada7e6d789eaac231f9928364d1e65717d944f0e460673fa9599ef972e85d1073e6957c3ab25ffd76c2095280ee13a36efdb75e47589a76e47b1c99a4b699
-EBUILD chromium-35.0.1916.47.ebuild 19800 SHA256 b73f57dc186ced9ff426c10e7b13e38ab15cb3469a046fac20501e51eb918d82 SHA512 bd12259f41e2063dc8380e36dcb15e1df598b1e2f8705a579fab1f9c12d314db8dfdfde4ea9ab7c552ad478cdc0f50ce2e71f90068abca1346769ddc59a5a433 WHIRLPOOL f41e4ae2330e2fcffebf335bf0a0bcd556cc0b7034d7343bae1e01625bc14877337ef83fb37f058d5ff07b38026f579d4120eff735a7bc1f6276aa5b0ecb8ba6
+EBUILD chromium-35.0.1916.47.ebuild 19893 SHA256 f045d7c171b7dae76595d09924d468665e1a05803f7a357333e8f64bff6c12a4 SHA512 3468751ee83e05f85c27fca904bd7612b22bbdf1b4a4660d77f12663c6718cb504f975605697092901073f4982ad763c4100386a1fb68b633ed80c55a2529a75 WHIRLPOOL 471a6f9ee2e0b4c0b3dc9830da4b5df869d1ebd9c8359c350485149336e38c716ce611882c98ec6a926e2c1157c267aa39a3daa52d111d5174620bdc690e2eb7
 EBUILD chromium-36.0.1941.0.ebuild 19912 SHA256 3d7ef672f6eda3a58810dd8bf97f2e61ca9cf67b41cae3a6ffc0ff2a84a86968 SHA512 6b2438e90d6fc56d1f4cc18bd3a134105184741eaf049951366e9ffa856bcdc7cfdf1f3bc4a33c552d64000ef0db8dfd7dce6143588da204365e93707e90ffa1 WHIRLPOOL faaecde67bd834675b8fe15894d3fc24e0d3b95a2de109a00ced8ce03c5ddf771b730ca2e92a7b2b2b2232ff6c3d76ff3db8142da8b2eceb814cad01e497305b
-MISC ChangeLog 103060 SHA256 d6f71f27864848cd4c6462c93873435f1e90856fda08cabec83e9b5e38008a99 SHA512 ba40641f067f97d7b0a6758fc9e887bd561fa497098803cc5a0162ffb2304da55224a43e28c55758073adebacf5000916f48b39b32c3a58748e828655b483985 WHIRLPOOL be2002ebc09e5e8392330956efb1edbcaac073e370b01c1dfe03583c3b7011eed2235722eeae389069783ba3f2f65fc9cfe0b52f8be64d0dda08e54085a3dd4a
+MISC ChangeLog 103202 SHA256 03027605bf3fa32e0504694ce4a8954e4004c88fb701645b0e103d0e981e0697 SHA512 68cf5e26a4455eb833a97fa4dc3e2f0c6cf6f2b7d0354eb4f6752883914b2b2f06fd1767e8fdfb59b3d8b00b25fd2e10755ba54acc29f869029c91042308d709 WHIRLPOOL 9f230281a4ac7e34985947484a17bc07956dbb4be6b7866a0dd5296295e82fc291f216a2194722d0ffb246003efab6156fc3a7f22da0f62ed12e478282ea21cd
 MISC ChangeLog-2011 114031 SHA256 e2c2c75785c5eaf78b6efe01e357279cbb7be0c89d00b4053f475e963916fa54 SHA512 8e14759348333bdbd7c338080472789d7bbb1ece1ca5817bac6306bdcb33dda1e23bf3055cbb3b7bcee9362b6900bba1ace7ba73f353570a74d3ed761c9198cc WHIRLPOOL 810b6423c53f892a4b0964380b8190dec2a8783d560a9cb0baec93a77d879186201055382ca05975ae242e16728529ae85445db003fdd425355292d17817157b
 MISC metadata.xml 599 SHA256 445f23a3d80f257019d11074a593608bc3f3abd22b6985b89f533d94f7799008 SHA512 606d4ead8b6e9c4852110a5b5efe5a5d6219d2e9d546ad114f01d496f4966df0238b8c1fdec93916715887a08e7737c138b6c0a22267256616edded58914c951 WHIRLPOOL d6273eb9bdc89b4a08a572a27708128985094bd684323c2c17587e80364bc446762b325d31977bed1bdbaec31e5dc6d22c29b5bc49c9943e99e837bf529bbea5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlNQWK4ACgkQC77qH+pIQ6T28gD/Qnw9MaLEWT6fQsiQTEoQaCYm
-TaOxz8r2s0x9S0pEYtoBAKe8od7LNyTWYUPvXd2fWk6r2jvNXdDi2gRzR/+5F2Fm
-=qyNY
+iF4EAREIAAYFAlNRJHwACgkQC77qH+pIQ6SaAgD+Jrr5qnZW6nFbHxLnyjTPfHdb
+Tqkd/9ckg10o0zoKtYAA/jXoFpN24Kyd8Gt3/rfZbRcKwCRd/47tWYAkVxVVJSHC
+=z3Kd
 -----END PGP SIGNATURE-----
